--- a/css/style.css
+++ b/css/style.css
@@ -577,6 +577,9 @@ body {
     background-position: center;
     background-repeat: no-repeat;
 }
+.internet-map {
+    border: 0;
+}
 .search {
     position: absolute;
     min-height: 395px;
@@ -1165,6 +1168,7 @@ input[type="checkbox"]:checked+label:disabled::before {
     font-size: 21px;
     line-height: 26px;
     font-weight: bold;
+    white-space: nowrap;
     margin: 0;
     padding-bottom: 3px;
 }
@@ -1176,11 +1180,13 @@ input[type="checkbox"]:checked+label:disabled::before {
         flex-basis: 900px;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
-            justify-content: space-between;
+            justify-content: flex-start;
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
+    white-space: nowrap;
     padding-right: 500px;
+  
     padding-left: 48px;
     padding-top: 2px;
     
@@ -1188,16 +1194,25 @@ input[type="checkbox"]:checked+label:disabled::before {
 }
 .result-sort a {
     text-decoration: none;
+    margin-left: 33px;
 }
 .result-sort-type {
    color: #cacaca;
     border-bottom: 1px dotted #81b3d2;
     
 }
-.result-sort span.active {
+.result-sort .active {
     color: #81b3d2;
     border: none;
-    padding-left: 5px;
+    padding-left: 7px;
+}
+.result-sort .active:hover {
+    color: #81b3d2;
+    border: none;
+}
+.result-sort .active:active {
+    color: #81b3d2;
+    border: none;
 }
 .result-sort-type:hover {
    color: #81b3d2;
@@ -1419,5 +1434,4 @@ input[type="checkbox"]:checked+label:disabled::before {
 .search-close {
     display: none;
 }
-
 
