--- a/css/style.css
+++ b/css/style.css
@@ -640,6 +640,7 @@ form .search-form {
     margin-bottom: 20px;
 }
 .search-data label {
+    display: block;
     width: 114px;
     text-align: left;
     
@@ -710,6 +711,7 @@ form .search-form {
 }
 
 .search-data-min label {
+    display: block;
     width: 113px;
     text-align: left;
 }
@@ -744,6 +746,7 @@ form .search-form {
     color: #000000;
     border: none;
     cursor: pointer;
+    font-family: "PT Sans", "Arial", sans-serif;
     font-size: 14px;
     font-weight: bold;
     line-height: 26px;
@@ -1176,8 +1179,8 @@ input[type="checkbox"]:checked+label:disabled::before {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-preferred-size: 900px;
-        flex-basis: 900px;
+    -ms-flex-preferred-size: 800px;
+        flex-basis: 800px;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: flex-start;
@@ -1185,11 +1188,11 @@ input[type="checkbox"]:checked+label:disabled::before {
         -ms-flex-align: baseline;
             align-items: baseline;
     white-space: nowrap;
-    padding-right: 500px;
+    
   
     padding-left: 48px;
     padding-top: 2px;
-    
+    margin-right: auto;
     
 }
 .result-sort a {
